<resources>
    <string name="app_name">리마인드</string>

    <string name="login_index_title">감정으로 기록하는 일상</string>
    <string name="login_index_subtitle">간단하게 소중한 감정을 공유해요</string>
    <string name="login_index_login_with_kakao">카카오로 시작하기</string>
    <string name="login_index_login_with_apple">Apple로 시작하기</string>
    <string name="login_index_login_with_google">Google로 시작하기</string>

    <string name="login_display_name_register_title">뭐라고 불러드릴까요?</string>
    <string name="login_display_name_register_placeholder">ex) 여름</string>
    <string name="login_display_name_register_rule">공백없이 한글,영문,숫자(2~10)자로 입력 해주세요.</string>
    <string name="login_display_name_show_greeting">님, 안녕하세요.</string>

    <string name="empty_screen_title">작업중인 페이지 입니다</string>
    <string name="empty_screen_subtitle">작업중인 페이지 입니다</string>

    <string name="home_title_my_view">%1$s님\n좋은 꿈 꾸셨나요?</string>
    <string name="home_title_other_view_empty_user">누구와\n함께할까요?</string>
    <string name="home_title_other_user_view">%1$s님과\n함께하고있어요</string>
    <string name="home_empty_mind_box_message">눌러서 %1$s님의 감정을\n알려주세요!</string>
    <string name="home_empty_other_mind_box_message">아직 %1$s님이\n기록한 감정이 없어요</string>
    <string name="home_label_mind_history">기록된 감정</string>
    <string name="home_empty_mind_history">아직 선택된 감정이 없어요</string>
    <string name="home_label_mind_memo">감정 메모</string>
    <string name="home_empty_mind_memo">아직 작성된 메모가 없어요</string>
    <string name="home_ask_mind_button">감정 묻기</string>
    <string name="home_ask_mind_dialog_content_text">%1$s님에게 감정을 물어볼까요?</string>
    <string name="home_my_view_button_post_mind">감정 기록하기</string>

    <string name="mind_history_appbar_title">감정 기록</string>
    <string name="mind_history_list_empty_text">기록한 감정이 없어요.</string>
    <string name="mind_history_view_type_selector_list">view type selector list</string>
    <string name="mind_history_view_type_selector_calendar">view type selector calendar</string>

    <string name="card_list_appbar_title">감정카드</string>

    <string name="card_list_detail_appbar_title">감정카드</string>

    <string name="card_bookmark_list_appbar_title">카드 보관함</string>
    <string name="card_bookmark_list_empty_text">북마크한 카드가 없어요.</string>

    <string name="card_detail_appbar_title">감정카드</string>
    <string name="card_detail_label_description">설명</string>
    <string name="card_detail_label_similar_cards">유사감정</string>
    <string name="card_detail_button_post_this_mind_card">이 감정 기록하기</string>

    <string name="mind_post_card_list_title">감정 기록을 시작할게요!</string>
    <string name="mind_post_card_list_label">가장 가까운 감정은 무엇인가요?</string>
    <string name="mind_post_card_list_label_sub">여러 개 선택이 가능해요!</string>

    <string name="mind_post_edit_title">%1$s님의 감정을 알려주세요!</string>
    <string name="mind_post_edit_label_main_mind">대표 감정</string>
    <string name="mind_post_edit_label_sub_main_mind">선택 된 대표감정은 홈에 보여져요</string>
    <string name="mind_post_edit_label_sub_mind">함께 일어난 감정</string>
    <string name="mind_post_edit_label_memo">무슨 일이 있었나요?</string>
    <string name="mind_post_edit_placeholder_memo">메모를 남길 수 있어요.\n어떤 상황에서 이 감정을 느끼셨나요?\n기록해서 감정 이야기를 들려주세요✨</string>

    <string name="mind_post_complete_title">%1$s님의 소중한 감정을\n완성했어요!</string>
    <string name="mind_post_complete_label_posted_minds">기록된 감정</string>
    <string name="mind_post_complete_label_memo">감정메모</string>
    <string name="mind_post_complete_label_photo">사진</string>
    <string name="mind_post_complete_alert_delete">기록한 감정을 삭제 할까요?</string>

    <string name="mind_memo_edit_appbar_title">감정메모</string>
    <string name="mind_memo_edit_alert_delete">메모를 삭제 할까요?</string>
    <string name="mind_memo_edit_memo_update_message">메모를 수정 했어요.</string>

    <string name="user_appbar_title">MY</string>
    <string name="user_display_name_suffix">%1$s 님</string>
    <string name="user_profile_management_button">프로필 관리</string>
    <string name="user_menu_button_setting">설정</string>
    <string name="user_menu_button_qna">건의 및 문의하기</string>
    <string name="user_menu_button_open_source_licenses">오픈소스 라이선스</string>
    <string name="user_menu_button_user_terms">이용약관</string>
    <string name="user_menu_button_personal_information_terms">개인정보 처리방침</string>
    <string name="user_menu_button_friend">친구 관리</string>

    <string name="user_profile_edit_appbar_title">프로필 관리</string>
    <string name="user_profile_edit_menu_delete_account">회원 탈퇴</string>
    <string name="user_profile_edit_delete_account_alert_title">정말 탈퇴 할까요?</string>
    <string name="user_profile_edit_delete_account_alert_content">기록한 정보가 모두 삭제되고\n복구할 수 없어요.</string>
    <string name="user_profile_edit_delete_account_alert_delete_button">탈퇴 하기</string>
    <string name="user_profile_view_empty_user_message">사용자 정보를 불러올 수 없어요.</string>

    <string name="friend_list_appbar_title">친구 관리</string>
    <string name="friend_list_label_my_friend">내 친구</string>
    <string name="friend_list_no_friend_text">등록된 친구가 없어요</string>
    <string name="friend_list_invite_friend_button_label">초대하기</string>
    <string name="friend_list_label_my_friend_request">내가 요청한 초대</string>
    <string name="friend_list_received_friend_request">내가 받은 초대</string>
    <string name="friend_list_alert_deny_friend_request">초대를 거절 할까요?</string>
    <string name="friend_list_alert_cancel_friend_request">초대를 취소 할까요?</string>

    <string name="user_profile_friend_delete_alert_title">정말 삭제 할까요?</string>
    <string name="user_profile_friend_delete_alert_message">친구 삭제시 친구가 작성한\n모든 기록을 볼 수 없게 돼요.</string>

    <string name="invite_appbar_title">초대하기</string>
    <string name="invite_label_use_invite_code">상대방 코드로 초대하기</string>
    <string name="invite_label_my_invite_code">내 코드로 상대방 초대하기</string>
    <string name="invite_button_label_invite">초대하기</string>
    <string name="invite_button_label_copy_invite_url">초대 링크 복사</string>
    <string name="invite_button_label_share_invite_url">초대 링크 공유</string>

    <string name="user_profile_friend_appbar_title">사용자 정보</string>
    <string name="user_profile_appbar_title">사용자 정보</string>

    <string name="invite_profile_appbar_title">초대하기</string>
    <string name="invite_profile_invite_button">초대하기</string>

    <string name="notification_list_title">알림</string>
    <string name="notification_list_load_before_items_button">이전 알림 보기</string>

    <string name="setting_appbar_title">설정</string>
    <string name="setting_label_notification">푸쉬알림</string>
    <string name="setting_notification_move_to_setting">어플리케이션 설정 페이지에서 알람 권한을 허용해야 해요.\n설정 페이지로 이동할까요?</string>

    <string name="timestamp_just_before">방금 전</string>
    <string name="timestamp_minutes_ago">분 전</string>
    <string name="timestamp_hours_ago">시간 전</string>
    <string name="timestamp_days_ago">일 전</string>
    <string name="timestamp_weeks_ago">주 전</string>
    <string name="timestamp_months_ago">달 전</string>
    <string name="timestamp_years_ago">년 전</string>
    <string name="year">년</string>
    <string name="month">월</string>
    <string name="day">일</string>

    <string name="empty_user_display_name">유저</string>

    <string name="mind_filter_all">전체</string>
    <string name="mind_filter_positive">긍정</string>
    <string name="mind_filter_negative">부정</string>
    <string name="mind_filter_normal">보통</string>
    <string name="mind_filter_energy">활력</string>
    <string name="mind_filter_pleasantness">쾌적함</string>

    <string name="tab_cards">감정카드</string>
    <string name="tab_home">홈</string>
    <string name="tab_user">유저</string>

    <string name="to_next">다음</string>
    <string name="to_save">저장하기</string>
    <string name="to_complete">완료</string>
    <string name="to_confirm">확인</string>
    <string name="to_update">수정</string>
    <string name="to_delete">삭제</string>
    <string name="to_cancel">취소</string>
    <string name="to_accept">수락</string>
    <string name="to_deny">거부</string>
    <string name="to_detail_view">자세히 보기</string>
    <string name="to_logout">로그아웃</string>
    <string name="to_move">이동</string>

    <string name="yyyy_mm_dd_e">yyyy년 MM월 dd일 E요일</string>

    <string name="exit">exit</string>
    <string name="step">STEP</string>
    <string name="refresh_button">refresh button</string>
    <string name="camera">camera</string>
    <string name="back">back</string>
    <string name="arrow_light_icon">arrow light icon</string>
    <string name="close_button">close button</string>
    <string name="share">share</string>
    <string name="menu">menu</string>
    <string name="comment">comment</string>
    <string name="arrow_left">arrow left</string>
    <string name="heart_fill">heart fill</string>
    <string name="heart_empty">heart empty</string>
    <string name="heart">heart</string>
    <string name="send_button">send button</string>
    <string name="user_icon">user icon</string>
    <string name="user_profile_edit_label_display_name">닉네임</string>
    <string name="user_profile_image">user profile image</string>
    <string name="copy_icon">copy icon</string>
    <string name="bookmark_on">bookmark on</string>
    <string name="bookmark_off">bookmark off</string>

    <string name="default_notification_channel_id">Friend Event</string>
</resources>