<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.onboard.displayName.DisplayNameRegisterActivity">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="31dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/bold_xxl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="26dp"
                android:text="@string/login_display_name_register_title"
                android:textColor="@color/fg_default" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/display_name_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:boxBackgroundColor="@color/bg_subtle"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"
                app:boxStrokeColor="@color/fg_muted"
                app:boxStrokeWidth="0dp"
                app:expandedHintEnabled="false"
                app:placeholderText="@string/login_display_name_register_placeholder"
                app:placeholderTextColor="@color/fg_muted">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/display_name_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="10"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/display_name_rule_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_display_name_register_rule"
                android:textColor="#595959" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_button"
            style="@style/bold_xl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="28dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/bt_primary"
            android:stateListAnimator="@null"
            android:text="@string/to_save"
            android:textColor="@color/bg_default"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>