<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.ccc.remind.presentation.ui.onboard.login.LoginViewModel" />

        <import type="android.view.View" />

        <variable
            name="buildConfig"
            type="com.ccc.remind.BuildConfig"/>
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.onboard.login.LoginActivity">


        <TextView
            android:id="@+id/title_textview"
            style="@style/bold_xxl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_index_title"
            android:textFontWeight="700"
            app:layout_constraintBottom_toTopOf="@id/subtitle_textview"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/subtitle_textview"
            style="@style/regular_xl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_index_subtitle"
            android:textColor="@color/fg_muted"
            app:layout_constraintBottom_toTopOf="@id/slide_viewpager"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_textview" />


        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/slide_viewpager"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="50dp"
            app:layout_constraintBottom_toTopOf="@id/slide_indicator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subtitle_textview" />

        <me.relex.circleindicator.CircleIndicator3
            android:id="@+id/slide_indicator"
            android:layout_width="0dp"
            android:layout_height="11dp"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            app:ci_animator="@animator/slide_animator"
            app:ci_drawable="@drawable/indicator_dot"
            app:ci_drawable_unselected="@drawable/indicator_unselected_dot"
            app:ci_height="11dp"
            app:ci_width="11dp"
            app:layout_constraintBottom_toTopOf="@id/kakao_login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/slide_viewpager" />

        <LinearLayout
            android:id="@+id/test1_login_button"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bt_login_google"
            android:clickable="true"
            android:gravity="center"
            android:visibility="@{buildConfig.DEBUG ? View.VISIBLE : View.GONE}"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/slide_indicator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/test2_login_button">

            <TextView
                style="@style/regular_xl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/fg_default"
                android:text="test account1"
                android:translationY="-2.07sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/test2_login_button"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/bt_login_google"
            android:clickable="true"
            android:gravity="center"
            android:visibility="@{buildConfig.DEBUG ? View.VISIBLE : View.GONE}"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="@id/test1_login_button"
            app:layout_constraintStart_toEndOf="@id/test1_login_button"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                style="@style/regular_xl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/fg_default"
                android:text="test account2"
                android:translationY="-2.07sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/kakao_login_button"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="36dp"
            android:background="@drawable/bt_login_kakao"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <View
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/ic_login_kakao" />

            <TextView
                style="@style/regular_xl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/fg_default"
                android:text="@string/login_index_login_with_kakao"
                android:translationY="-2.07sp" />
        </LinearLayout>

<!--        <LinearLayout-->
<!--            android:id="@+id/apple_login_button"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="54dp"-->
<!--            android:layout_marginHorizontal="20dp"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:background="@drawable/bt_login_apple"-->
<!--            android:clickable="true"-->
<!--            android:gravity="center"-->
<!--            android:orientation="horizontal"-->
<!--            app:layout_constraintBottom_toTopOf="@id/google_login_button"-->
<!--            app:layout_constraintTop_toBottomOf="@id/kakao_login_button">-->

<!--            <View-->
<!--                android:layout_width="24dp"-->
<!--                android:layout_height="24dp"-->
<!--                android:background="@drawable/ic_login_apple" />-->

<!--            <TextView-->
<!--                style="@style/regular_xl"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="8dp"-->
<!--                android:textColor="@color/bg_default"-->
<!--                android:text="@string/login_index_login_with_apple"-->
<!--                android:translationY="-2.07sp" />-->
<!--        </LinearLayout>-->

<!--        <LinearLayout-->
<!--            android:id="@+id/google_login_button"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="54dp"-->
<!--            android:layout_marginHorizontal="20dp"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:background="@drawable/bt_login_google"-->
<!--            android:clickable="true"-->
<!--            android:gravity="center"-->
<!--            android:orientation="horizontal"-->
<!--            app:layout_constraintTop_toBottomOf="@id/apple_login_button"-->
<!--            app:layout_constraintBottom_toBottomOf="parent">-->

<!--            <View-->
<!--                android:layout_width="24dp"-->
<!--                android:layout_height="24dp"-->
<!--                android:background="@drawable/ic_login_google" />-->

<!--            <TextView-->
<!--                style="@style/regular_xl"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="8dp"-->
<!--                android:textColor="@color/fg_default"-->
<!--                android:text="@string/login_index_login_with_google"-->
<!--                android:translationY="-2.07sp" />-->
<!--        </LinearLayout>-->



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>